syntax = "proto3";

import "ffi_event_type.proto";

message HkFFIResponse {
    HkFFIEventType event = 1;
    bytes payload = 2;
    HkFFIStatusCode code = 3;
}

enum HkFFIStatusCode {
    Ok = 0;
    Err = 1;
    Internal = 2;
}
